230228 메인화면, 홈 아이콘 등 수정

--- a/Ki4C_Solution/Views/Common/Auth/FindIdInput.cshtml
+++ b/Ki4C_Solution/Views/Common/Auth/FindIdInput.cshtml
@@ -43,13 +43,16 @@
     <!-- 콘텐츠 -->
     <div id="wrap">
         <h2>아이디 찾기</h2>
-        <div style="float: right;">
+        <div id="menuIdx">
+            <div style="float: left;">
+                <img id=home_img src="~/images/home-1.png">
+            </div>
             <a class="text-primary" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
             &gt;
             아이디 찾기
         </div>
         <br>
-        <hr />
+        <hr style="border: solid 0.5px black; width: 100%;" />
         <!-- 아이디 찾기 -->
         <div class="contents" style="margin: 0 auto;">
             <div style="text-align: center; padding-right: 50px;">
@@ -66,7 +69,7 @@
                 <div style="padding-left: 90px; padding-top: 20px;">
                     <a href="#" style="display: inline-block;">
                         <input id="find-button" type="submit" value="아이디 찾기" onclick="FindIdInputJS.submitBtnClick()" />
-                    </a>                    
+                    </a>
                     <a style="display: inline-block;" asp-area="" asp-controller="CommonAuth" asp-action="Login">
                         <input id="cancle-button" type="submit" value="취소" />
                     </a>
