--- a/Ki4C_Solution/Views/Common/Auth/FindPassInput.cshtml
+++ b/Ki4C_Solution/Views/Common/Auth/FindPassInput.cshtml
@@ -42,13 +42,16 @@
     <!-- 콘텐츠 -->
     <div id="wrap">
         <h2>비밀번호 찾기</h2>
-        <div style="float: right;">
+        <div id="menuIdx">
+            <div style="float: left;">
+                <img id=home_img src="~/images/home-1.png">
+            </div>
             <a href="#">Home</a>
             &gt;
             비밀번호 찾기
         </div>
         <br>
-        <hr />
+        <hr style="border: solid 0.5px black; width: 100%;" />
         <!-- 비밀번호 찾기 -->
         <div class="contents" style="margin: 0 auto;">
             <div style="text-align: center; padding-right: 50px;">
@@ -61,11 +64,11 @@
                         <input type="text" placeholder="아이디를 입력해주세요."
                                style="max-width: 400px; width: 130%; height: 30px; font-size: 16px;
                                 margin-bottom: 3px;"
-                               onfocus="this.value='';" id="Input_Id"/> <br>
+                               onfocus="this.value='';" id="Input_Id" /> <br>
                     </div>
-                <br>
-                <a>이메일 </a>
-                <br>
+                    <br>
+                    <a>이메일 </a>
+                    <br>
                     <div style="padding-top: 10px; display: inline-block;">
                         <input type="text" placeholder="이메일을 입력해주세요."
                                style="max-width: 400px; width: 130%; height: 30px; font-size: 16px;
