--- a/Ki4C_Solution/Views/Home/TViewPageList.cshtml
+++ b/Ki4C_Solution/Views/Home/TViewPageList.cshtml
@@ -249,9 +249,15 @@
             </td>
         </tr>
         <tr>
+            <td>SelectedDiagnosticEvaluation</td>
+            <td>
+                <a class="text-dark" asp-area="" asp-controller="MemberDiagnosis" asp-action="SelectedDiagnosticEvaluation">/Member/Diagnosis/SelectedDiagnosticEvaluation</a>
+            </td>
+        </tr>
+        <tr>
             <td>DXSelfDiagnosisDetailView</td>
             <td>
-                <a class="text-primary" asp-area="" asp-controller="MemberMypage" asp-action="DXSelfDiagnosisDetailView">/member/mypage/DXSelfDiagnosisDetailView.html</a>
+                <a class="text-primary" asp-area="" asp-controller="MemberMypage" asp-action="DXSelfDiagnosisDetailView">/member/mypage/DXSelfDiagnosisDetailView</a>
             </td>
         </tr>
     </tbody>
