--- a/Ki4C_Solution/Views/Member/Diagnosis/DiagnosticEvaluationList.cshtml
+++ b/Ki4C_Solution/Views/Member/Diagnosis/DiagnosticEvaluationList.cshtml
@@ -12,7 +12,11 @@
     <!-- 콘텐츠 -->
     <div id=contetns style="width: 100%;">
         <h2>진단평가 관리</h2>
-        <div style="float: right;">
+        <br />
+        <div id="menuIdx">
+            <div style="float: left;">
+                <img id=home_img src="~/images/home-1.png">
+            </div>
             <a href="#">Home</a>
             &gt;
             <a href="#">진단 관리</a>
@@ -20,7 +24,7 @@
             진단평가 관리
         </div>
         <br>
-        <hr />
+        <hr style="border: solid 0.5px black; width: 100%;" />
         <!-- 진단평가 관리 -->
         <div style="display: inline-block;">
             <div id="buttonLocation">
