--- a/Ki4C_Solution/Views/Member/Mypage/DXSelfDiagnosisDetailView.cshtml
+++ b/Ki4C_Solution/Views/Member/Mypage/DXSelfDiagnosisDetailView.cshtml
@@ -85,7 +85,10 @@
     <!-- 콘텐츠 -->
     <div id=contetns style="width: 100%;">
         <h2>DX 자체 진단 결과 보고서</h2>
-        <div style="float: right;">
+        <div id="menuIdx">
+            <div style="float: left;">
+                <img id=home_img src="~/images/home-1.png">
+            </div>
             <a href="#">Home</a>
             &gt;
             <a href="#">마이페이지</a>
