--- a/Ki4C_Solution/Views/Member/Mypage/MyInfoRead.cshtml
+++ b/Ki4C_Solution/Views/Member/Mypage/MyInfoRead.cshtml
@@ -16,7 +16,10 @@
     <!-- 콘텐츠 -->
     <div id=contents style="width: 100%;">
         <h2>진단 내역</h2>
-        <div style="float: right;">
+        <div id="menuIdx">
+            <div style="float: left;">
+                <img id=home_img src="~/images/home-1.png">
+            </div>
             <a href="#">Home</a>
             &gt;
             <a href="#">마이 페이지</a>
@@ -24,7 +27,7 @@
             내 정보 보기
         </div>
         <br>
-        <hr />
+        <hr style="width: 100%" />
         <!-- 진단 내역 -->
         <div style="display: inline-block;">
             <div id="buttonLocation">
