--- a/Ki4C_Solution/Views/Member/Mypage/MyInfoUpdate.cshtml
+++ b/Ki4C_Solution/Views/Member/Mypage/MyInfoUpdate.cshtml
@@ -54,7 +54,10 @@
     <!-- 콘텐츠 -->
     <div id=contetns style="width: 100%;">
         <h2>내 정보 수정</h2>
-        <div style="float: right;">
+        <div id="menuIdx">
+            <div style="float: left;">
+                <img id=home_img src="~/images/home-1.png">
+            </div>
             <a href="#">Home</a>
             &gt;
             <a href="#">마이 페이지</a>
@@ -62,7 +65,7 @@
             내 정보 수정
         </div>
         <br>
-        <hr />
+        <hr style="width: 100%" />
         <!-- 내 정보 수정 -->
         <div style="width: 80%; background-color: blanchedalmond;
                 margin: auto; padding: 20px 10px; text-align: center;">
