--- a/Ki4C_Solution/Views/Shared/_LayoutKi4C_Aside_dg.cshtml
+++ b/Ki4C_Solution/Views/Shared/_LayoutKi4C_Aside_dg.cshtml
@@ -16,7 +16,7 @@
         <!-- //header -->
         <!-- nav --------------------------------------------- -->
         @{
-            await Html.RenderPartialAsync("~/Views/Shared/_Aside_dg_ev_mgnt.cshtml");
+            await Html.RenderPartialAsync("~/Views/Shared/_Aside_dg.cshtml");
         }
         <!-- //nav --------------------------------------------- -->
         
