--- a/Ki4C_Solution/Views/Common/Auth/Login.cshtml
+++ b/Ki4C_Solution/Views/Common/Auth/Login.cshtml
@@ -69,24 +69,30 @@
 </style>
 <section>
     <!-- 콘텐츠 -->
-    <div id="wrap" style="width: 80%;">
+    <div id="wrap" style="width: 100%;">
         <h2>로그인</h2>
-        <div style="float: right;">
+        <br />
+        <div id="menuIdx">
+            <div style="float: left;">
+                <img id=home_img src="~/images/home-1.png">
+            </div>
             <a href="#">Home</a>
             &gt;
             로그인
         </div>
-        <br>
-        <hr />
+        <br />
+        <hr style="width: 100%" />
+        <br />
         <!-- 로그인 -->
         <div class="contents" style="text-align: center;">
             <div style="width: 100%; height: 130px;">
                 <h1 id="login">Log In <a style="color: red;">*</a></h1>
+                <br />
                 <form method="post" id="Login-form" asp-controller="CommonAuth" asp-action="Login">
                     <input type="text" placeholder="이메일(email@address.com)"
                            style="max-width: 300px; width: 80%; height: 30px; font-size: 16px;
                             margin-bottom: 3px;"
-                           onfocus="this.value='';" id="Input_Id" asp-for="Id"/> <br>
+                           onfocus="this.value='';" id="Input_Id" asp-for="Id" /> <br>
                     <input type="password" placeholder="비밀번호"
                            style="max-width: 300px; width: 80%; height: 30px; font-size: 16px;"
                            onfocus="this.value='';" id="Input_Password" asp-for="Password" />
