--- a/Ki4C_Solution/Views/Common/Company/Greetings.cshtml
+++ b/Ki4C_Solution/Views/Common/Company/Greetings.cshtml
@@ -1,23 +1,22 @@
 ﻿@{
     // Used Table []
-    // 회사 소개 인사말
+    // DX진단 플랫폼 소개 / DX진단 필요성
     Layout = "~/Views/Shared/_LayoutKi4C_Aside.cshtml";
-    ViewData["Title"] = "회사 소개";
+    //ViewData["Title"] = "회사 소개";
+    ViewData["Title"] = "DX진단 필요성";
 }
 <style>
     /* Greeting.html */
     #greeting_img {
-        border:1px solid green;
         width: 30%;
         float: right;
     }
     #greeting {
-        border:1px solid red;
         width: 65%;
         float: left;
     }
-
-    @@media (max-width: 768px){
+ 
+    @@media (max-width: 768px) {
         #greeting_img {
             display: block;
             float: left;
@@ -32,23 +31,29 @@
     <!-- 콘텐츠 -->
     <div id=contetns style="width: 100%;">
         <h2>인사말</h2>
-        <div style="float: right;">
+        <br />
+        <div id="menuIdx">
+            <div style="float: left;">
+                <img id=home_img src="~/images/home-1.png">
+            </div>
             <a class="text-primary" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
             &gt;
-            <a class="text-primary" asp-area="" asp-controller="CommonCompany" asp-action="Greetings">회사소개</a>
+            <a class="text-primary" asp-area="" asp-controller="CommonCompany" asp-action="Greetings">DX진단 플랫폼 소개</a>
             &gt;
-            인사말
+            DX진단 필요성
         </div>
         <br>
-        <hr />
+        <hr style="border: solid 0.5px black; width: 100%;" />
         <!-- 프로필 이미지 -->
         <div id=greeting_img>
             <img style="width: 100%; height: calc (width*1.3);" src="~/images/greeting.png">
         </div>
         <!-- 프로필 이미지 -->
-        <!-- 인사말 -->
+        <!-- DX진단 필요성 -->
         <div id=greeting>
-            <h3>인사말</h3>
+            <br />
+            <h3>DX진단 필요성</h3>
+            <br />
             <div>
                 <p>
                     코로나19 팬데믹 이후 기업 경영환경이 불확실해지면서 ​기업은 '혁신성장'을 위한 디지털트랜스포메이션(DX:Digital Transformation)으로 성장 패러다임의 대전환이 필요합니다.
@@ -57,7 +62,9 @@
                     하지만 성공적인 디지털트랜스포케이션을 이뤄낸 회사 중 대부분은  인간, 조직 차원의 변혁을 통하여 성과를 거둔 곳입니다.
                 </p>
             </div>
-            <h3>Greeting</h3>
+            <br />
+            <h3>DX진단 필요성 2</h3>
+            <br />
             <div>
                 <p>
                     코로나19 팬데믹 이후 기업 경영환경이 불확실해지면서 ​기업은 '혁신성장'을 위한 디지털트랜스포메이션(DX:Digital Transformation)으로 성장 패러다임의 대전환이 필요합니다.
@@ -67,7 +74,7 @@
                 </p>
             </div>
         </div>
-        <!-- 인사말 -->
+        <!-- DX진단 필요성 -->
     </div>
     <!-- 콘텐츠 -->
 </section>
