--- a/Ki4C_Solution/Views/Common/Company/OnTheWay.cshtml
+++ b/Ki4C_Solution/Views/Common/Company/OnTheWay.cshtml
@@ -9,7 +9,11 @@
     <!-- 콘텐츠 -->
     <div id=contetns style="width: 100%;">
         <h2>찾아오시는 길</h2>
-        <div style="float: right;">
+        <br />
+        <div id="menuIdx">
+            <div style="float: left;">
+                <img id=home_img src="~/images/home-1.png">
+            </div>
             <a href="#">Home</a>
             &gt;
             <a href="#">회사소개</a>
@@ -17,16 +21,18 @@
             찾아오시는 길
         </div>
         <br>
-        <hr />
+        <hr style="border: solid 0.5px black; width: 100%;" />
         <!-- 찾아오시는 길 -->
         <div style="width: 100%;">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3166.156555573082!2d126.88057020000002!3d37.4806318!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357b61e293684ea3%3A0x2df84ac52e3a85d6!2z7ISc7Jq47Yq567OE7IucIOq4iOyynOq1rCDqsIDsgrDrlJTsp4DthLgx66GcIDE3MQ!5e0!3m2!1sko!2skr!4v1675224697612!5m2!1sko!2skr"
                     width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <br />
             <div style="width: 45%; height: 30%; float: left; padding: 10px;">
                 <p>
                     케이아이포씨(Ki4C) 협동조합
                 </p>
             </div>
+            <br />
             <div style="width: 45%; height: 30%; float: right;">
                 <p>
                     서울특별시 금천구 가산디지털 1로 171, 303-316호, <br>
