--- a/Ki4C_Solution/Views/Common/Member/MemberReg.cshtml
+++ b/Ki4C_Solution/Views/Common/Member/MemberReg.cshtml
@@ -105,12 +105,15 @@
     <div id="wrap">
         <h2>회원가입</h2>
         <div style="float: right;">
+            <div id=home_img style="float: left;">
+                <img style="width: 25px; height: 25px; padding-right: 3px;" src="~/images/home-1.png">
+            </div>
             <a href="#">Home</a>
             &gt;
             회원가입
         </div>
         <br>
-        <hr />
+        <hr style="border: solid 0.5px black; width: 100%;" />
         <!-- 회원가입 -->
         <div class="contents" style="display: flex; justify-content: center;">
             <div style="width: 80%;">
