--- a/Ki4C_Solution/Views/Manager/Diagnosis/DiagnosisMgrList.cshtml
+++ b/Ki4C_Solution/Views/Manager/Diagnosis/DiagnosisMgrList.cshtml
@@ -31,6 +31,9 @@
     <div id=contetns style="width: 100%;">
         <h2>진단 목록</h2>
         <div style="float: right;">
+            <div id=home_img style="float: left;">
+                <img style="width: 25px; height: 25px; padding-right: 3px;" src="~/images/home-1.png">
+            </div>
             <a href="#">Home</a>
             &gt;
             <a href="#">진단 관리/평가관리 시스템</a>
@@ -38,7 +41,7 @@
             진단 관리
         </div>
         <br>
-        <hr />
+        <hr style="border: solid 0.5px black; width: 100%;" />
         <!-- 진단 관리 목록 -->
         <div style="display: inline-block;">
             <div style="width: 90%; margin: auto;">
