--- a/Ki4C_Solution/Views/Member/Diagnosis/Application4Evaluation.cshtml
+++ b/Ki4C_Solution/Views/Member/Diagnosis/Application4Evaluation.cshtml
@@ -7,7 +7,11 @@
     <!-- 콘텐츠 -->
     <div id=contetns style="width: 100%;">
         <h2>평가기업 신청</h2>
-        <div style="float: right;">
+        <br />
+        <div id="menuIdx">
+            <div style="float: left;">
+                <img id=home_img src="~/images/home-1.png">
+            </div>
             <a href="#">Home</a>
             &gt;
             <a href="#">진단 관리</a>
@@ -15,7 +19,7 @@
             진단 평가
         </div>
         <br>
-        <hr />
+        <hr style="border: solid 0.5px black; width: 100%;" />
         <!-- 평가기업 신청 -->
         <div style="display: inline-block;">
             <div id="buttonLocation">
