--- a/Ki4C_Solution/Views/Member/Mypage/MyInfoDelete.cshtml
+++ b/Ki4C_Solution/Views/Member/Mypage/MyInfoDelete.cshtml
@@ -24,7 +24,10 @@
     <!-- 콘텐츠 -->
     <div id=contetns style="width: 100%;">
         <h2>탈퇴</h2>
-        <div style="float: right;">
+        <div id="menuIdx">
+            <div style="float: left;">
+                <img id=home_img src="~/images/home-1.png">
+            </div>
             <a href="#">Home</a>
             &gt;
             <a href="#">마이페이지</a>
@@ -32,7 +35,7 @@
             탈퇴
         </div>
         <br>
-        <hr /> <br> <br>
+        <hr style="width: 100%" /> <br> <br>
         <!-- 탈퇴 -->
         <div style="width: 80%; margin: auto;">
             <div style="width: 90%; height: 100px;">
