--- a/Ki4C_Solution/Views/Shared/_Aside_dg_ev_mgnt.cshtml
+++ b/Ki4C_Solution/Views/Shared/_Aside_dg_ev_mgnt.cshtml
@@ -16,6 +16,51 @@
         border: none;
         border-radius: 30px;
     }
+    #menuBox {
+        padding: 5px;
+        width: 90%;
+        height: 60px;
+        text-align: center;
+        background: #fafafa;
+        margin: auto;
+    }
+
+    #menuTitle {
+        width: 90%;
+        height: 50px;
+        line-height: 50px;
+        text-align: center;
+        font-size: 18px;
+        font-weight: 700;
+        color: #34B0C7;
+    }
+
+    #menuLogo {
+        width: 70px;
+        height: 55px;
+    }
+
+    #lnb {
+        width: 90%;
+        background: #fafafa;
+        font-size: 16px;
+        font-weight: 600;
+        margin: auto;
+    }
+
+    .menu {
+        height: 40px;
+        line-height: 40px;
+    }
+
+        .menu:hover {
+            background-color: #34B0C7;
+            color: white;
+        }
+
+        .menu a {
+            padding-left: 10px;
+        }
 </style>
 <aside>
     <div style="padding: 10px; height: 80px; line-height: 30px; background: white;">
@@ -30,13 +75,20 @@
             <input id="logoutButton" type="submit" value="로그아웃" />
         </div>
     </div>
-    <div style="margin-top: 10px; padding: 10px; height: 30px; line-height: 30px; background: white;">
-        ▣ 진단관리/평가관리시스템
+    <div id="menuBox">
+        <img id="menuLogo" src="~/images/menu1.png">
     </div>
-    <div style="height: 300px; background: grey;">
+    <div id="menuTitle">
+        진단관리/평가관리시스템
+    </div>
+    <div id="lnb" style="height: 300px;">
         <ul style="list-style:none; padding-left:0px;">
-            <li style="padding: 10px 0 0 10px;"><a asp-area="" asp-controller="ManagerDiagnosis" asp-action="DiagnosisMgrList">◎ 진단 관리</a></li>
-            <li style="padding: 10px 0 0 10px;"> <a asp-area="" asp-controller="ManagerDiagnosis" asp-action="DiagnosisEvaluationMgrList">◎ 진단평가 관리</a></li>
+            <li class="menu">
+                <a asp-area="" asp-controller="ManagerDiagnosis" asp-action="DiagnosisMgrList">진단 관리</a>
+            </li>
+            <li class="menu">
+                <a asp-area="" asp-controller="ManagerDiagnosis" asp-action="DiagnosisEvaluationMgrList">진단평가 관리</a>
+            </li>
         </ul>
     </div>
 </aside>
