--- a/Ki4C_Solution/Views/Shared/_Aside_dg_mgnt.cshtml
+++ b/Ki4C_Solution/Views/Shared/_Aside_dg_mgnt.cshtml
@@ -67,6 +67,51 @@
             margin-right: 10px;
         }
     }
+    #menuBox {
+        padding: 5px;
+        width: 90%;
+        height: 60px;
+        text-align: center;
+        background: #fafafa;
+        margin: auto;
+    }
+
+    #menuTitle {
+        width: 90%;
+        height: 50px;
+        line-height: 50px;
+        text-align: center;
+        font-size: 18px;
+        font-weight: 700;
+        color: #34B0C7;
+    }
+
+    #menuLogo {
+        width: 70px;
+        height: 55px;
+    }
+
+    #lnb {
+        width: 90%;
+        background: #fafafa;
+        font-size: 16px;
+        font-weight: 600;
+        margin: auto;
+    }
+
+    .menu {
+        height: 40px;
+        line-height: 40px;
+    }
+
+        .menu:hover {
+            background-color: #34B0C7;
+            color: white;
+        }
+
+        .menu a {
+            padding-left: 10px;
+        }
 </style>
 <aside>
     <div style="padding: 10px; height: 80px; line-height: 30px; background: white;">
@@ -78,19 +123,30 @@
             산업공학과 교수
         </div>
         <div style="position: relative; left: 60px;">
-            <input id="mypageButton" type="submit" value="마이페이지"/>
-            <input id="logoutButton" type="submit" value="로그아웃"/>        
+            <input id="mypageButton" type="submit" value="마이페이지" />
+            <input id="logoutButton" type="submit" value="로그아웃" />
         </div>
     </div>
-    <div style="margin-top: 10px; padding: 10px; height: 30px; line-height: 30px; background: white;">
-        ▣ 진단관리
+    <div id="menuBox">
+        <img id="menuLogo" src="~/images/menu1.png">
     </div>
-    <div style="height: 300px; background: grey;">
+    <div id="menuTitle">
+        진단관리
+    </div>
+    <div id="lnb" style="height: 300px;">
         <ul style="list-style:none; padding-left:0px;">
-            <li style="padding: 10px 0 0 10px;"> <a class="text-dark" asp-area="" asp-controller="MemberDiagnosis" asp-action="Application4Evaluation">◎ 진단 평가</a></li>
-            <li style="padding: 10px 0 0 10px;"> <a class="text-dark" asp-area="" asp-controller="MemberDiagnosis" asp-action="Application4Evaluation">◎ 평가기업 신청</a></li>
-            <li style="padding: 10px 0 0 10px;"> <a class="text-dark" asp-area="" asp-controller="MemberDiagnosis" asp-action="SelectedResultList">◎ 선정 기업</a></li>
-            <li style="padding: 10px 0 0 10px;"> <a class="text-dark" asp-area="" asp-controller="MemberDiagnosis" asp-action="DiagnosticEvaluationList">◎ 진단평가 관리</a></li>            
+            <li class="menu">
+                <a class="text-dark" asp-area="" asp-controller="MemberDiagnosis" asp-action="Application4Evaluation">진단 평가</a>
+            </li>
+            <li class="menu">
+                <a class="text-dark" asp-area="" asp-controller="MemberDiagnosis" asp-action="Application4Evaluation">평가기업 신청</a>
+            </li>
+            <li class="menu">
+                <a class="text-dark" asp-area="" asp-controller="MemberDiagnosis" asp-action="SelectedResultList">선정 기업</a>
+            </li>
+            <li class="menu">
+                <a class="text-dark" asp-area="" asp-controller="MemberDiagnosis" asp-action="DiagnosticEvaluationList">진단평가 관리</a>
+            </li>
         </ul>
     </div>
 </aside>
