--- a/Ki4C_Solution/Views/Shared/_Aside_my.cshtml
+++ b/Ki4C_Solution/Views/Shared/_Aside_my.cshtml
@@ -63,6 +63,51 @@
             margin-right: 10px;
         }
     }
+    #menuBox {
+        padding: 5px;
+        width: 90%;
+        height: 60px;
+        text-align: center;
+        background: #fafafa;
+        margin: auto;
+    }
+
+    #menuTitle {
+        width: 90%;
+        height: 50px;
+        line-height: 50px;
+        text-align: center;
+        font-size: 18px;
+        font-weight: 700;
+        color: #34B0C7;
+    }
+
+    #menuLogo {
+        width: 70px;
+        height: 55px;
+    }
+
+    #lnb {
+        width: 90%;
+        background: #fafafa;
+        font-size: 16px;
+        font-weight: 600;
+        margin: auto;
+    }
+
+    .menu {
+        height: 40px;
+        line-height: 40px;
+    }
+
+        .menu:hover {
+            background-color: #34B0C7;
+            color: white;
+        }
+
+        .menu a {
+            padding-left: 10px;
+        }
 </style>
 <aside>
     <div style="padding: 10px; height: 80px; line-height: 30px; background: white;">
@@ -74,18 +119,27 @@
             산업공학과
         </div>
         <div style="position: relative; left: 60px;">
-            <input id="mypageButton" type="submit" value="마이페이지"/>
-            <input id="logoutButton" type="submit" value="로그아웃"/>        
+            <input id="mypageButton" type="submit" value="마이페이지" />
+            <input id="logoutButton" type="submit" value="로그아웃" />
         </div>
     </div>
-    <div style="margin-top: 10px; padding: 10px; height: 30px; line-height: 30px; background: white;">
-        ▣ 마이 페이지
+    <div id="menuBox">
+        <img id="menuLogo" src="~/images/menu1.png">
     </div>
-    <div style="height: 300px; background: lightgrey;">
+    <div id="menuTitle">
+        마이 페이지
+    </div>
+    <div id="lnb" style="height: 300px;">
         <ul style="list-style:none; padding-left:0px;">
-            <li style="padding: 10px 0 0 10px;"><a asp-area="" asp-controller="MemberMypage" asp-action="MyInfoRead">◎ 내 정보 보기</a></li>
-            <li style="padding: 10px 0 0 10px;"><a asp-area="" asp-controller="MemberMypage" asp-action="MyInfoUpdate">◎ 내 정보 수정</a></li>
-            <li style="padding: 10px 0 0 10px;"><a asp-area="" asp-controller="MemberMypage" asp-action="MyInfoDelete">◎ 탈퇴</a></li>
+            <li class="menu">
+                <a asp-area="" asp-controller="MemberMypage" asp-action="MyInfoRead">내 정보 보기</a>
+            </li>
+            <li class="menu">
+                <a asp-area="" asp-controller="MemberMypage" asp-action="MyInfoUpdate">내 정보 수정</a>
+            </li>
+            <li class="menu">
+                <a asp-area="" asp-controller="MemberMypage" asp-action="MyInfoDelete">탈퇴</a>
+            </li>
         </ul>
     </div>
 </aside>
