--- a/Ki4C_Solution/wwwroot/css/style_wide.css
+++ b/Ki4C_Solution/wwwroot/css/style_wide.css
@@ -1,27 +1,53 @@
 /* 기본 설정 */
-body {background: #f3e5f5;}
+@import url(https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css);
+body {
+    background: #fafafa;
+    font-family: 'NanumSquare', sans-serif;
+}
 #wrap {width: 1200px; margin: 0 auto;}
-header {width: 100%; height: 100px; background: white;}
+header {width: 100%; height: 100px; background: fafafa;}
 aside {
     float: left;
     width: 200px; height: 700px;
     padding: 20px 10px 10px 10px;
-    background: white;}
+    background: #fafafa;}
 section {
     float: left;
     width: 96.6%;
     height: calc( 100% - 300px );
-    min-height: 700px;
+    min-height: 550px;
     padding: 20px;
-    background: #f2f2f2;
+    background: #fafafa;
     display: flex;
 }
-footer {clear: both; width: 100%; height: 200px; background: black;}
+footer {
+    clear: both;
+    width: 100%;
+    height: 200px;
+    background: #2A3142;
+    margin: 0 auto;
+}
 #nav_2 {
     display: none;
 }
 
+#menuIdx {
+    float: right;
+    height: 25px;
+    line-height: 25px;
+}
+
+#home_img {
+    width: 25px;
+    height: 25px;
+    padding-right: 3px;
+}
+
 /* 기본 서식 */
+body {
+    font-family: 'NanumSquare', sans-serif;
+}
+
 a {
     text-decoration: none;
     color: inherit;
@@ -36,11 +62,20 @@ footer {
     #wrap {width: 100%;}
     header {height: 50px;}
     aside {display: none;}
-    section {width: 90%; min-height: 600px;}
-    #nav_1 {
+    section {width: 90%; min-height: 550px; margin: 0 auto;}
+    #menu {
         display: none;
     }
     #nav_2 {
         display: block;
+    }
+    #menuIdx {
+        font-size: 12px;
+    }
+
+    #home_img {
+        width: 20px;
+        height: 20px;
+        padding-top: 3px;
     }
 }
