--- a/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisLevel.cshtml
+++ b/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisLevel.cshtml
@@ -10,7 +10,11 @@
     <!-- 콘텐츠 -->
     <div id=contetns style="width: 100%;">
         <h2>진단 수준 등록 및 목록</h2>
-        <div style="float: right;">
+        <br />
+        <div id="menuIdx">
+            <div style="float: left;">
+                <img id=home_img src="~/images/home-1.png">
+            </div>
             <a href="#">Home</a>
             &gt;
             <a href="#">기준 정보</a>
@@ -18,7 +22,7 @@
             진단 수준 등록 및 목록
         </div>
         <br>
-        <hr />
+        <hr style="border: solid 0.5px black; width: 100%;" />
         <!-- 진단 수준 등록 -->
         <div style="padding-top: 30px; padding-left: 30px; height: 200px;">
             <a>진단 수준 코드: </a>
