--- a/Ki4C_Solution/Views/Shared/_Aside_dg.cshtml
+++ b/Ki4C_Solution/Views/Shared/_Aside_dg.cshtml
@@ -61,6 +61,51 @@
     #buttonLocation {
         float: right; margin-right: -50px;
     }
+    #menuBox {
+        padding: 5px;
+        width: 90%;
+        height: 60px;
+        text-align: center;
+        background: #fafafa;
+        margin: auto;
+    }
+
+    #menuTitle {
+        width: 90%;
+        height: 50px;
+        line-height: 50px;
+        text-align: center;
+        font-size: 18px;
+        font-weight: 700;
+        color: #34B0C7;
+    }
+
+    #menuLogo {
+        width: 70px;
+        height: 55px;
+    }
+
+    #lnb {
+        width: 90%;
+        background: #fafafa;
+        font-size: 16px;
+        font-weight: 600;
+        margin: auto;
+    }
+
+    .menu {
+        height: 40px;
+        line-height: 40px;
+    }
+
+        .menu:hover {
+            background-color: #34B0C7;
+            color: white;
+        }
+
+        .menu a {
+            padding-left: 10px;
+        }
     @@media (max-width: 768px){
         #table {
             width: 100%;
@@ -76,28 +121,46 @@
 <aside>
     <div style="padding: 10px; height: 80px; line-height: 30px; background: white;">
         <div id=profile_img style="display: inline;">
-            <img style="width: 50px; height: 50px; "src="~/images/profile.png">
+            <img style="width: 50px; height: 50px; " src="~/images/profile.png">
         </div>
         <div style="display: inline; height: 20px; vertical-align: top; margin-left: 10px;">
             관리자466
         </div>
         <div style="position: relative; left: 60px;">
-            <input id="mypageButton" type="submit" value="마이페이지"/>
-            <input id="logoutButton" type="submit" value="로그아웃"/>        
+            <input id="mypageButton" type="submit" value="마이페이지" />
+            <input id="logoutButton" type="submit" value="로그아웃" />
         </div>
     </div>
-    <div style="margin-top: 10px; padding: 10px; height: 30px; line-height: 30px; background: white;">
-        ▣ 기준 정보
+    <div id="menuBox">
+        <img id="menuLogo" src="~/images/menu1.png">
     </div>
-    <div style="height: 300px; background: grey;">
+    <div id="menuTitle">
+        기준 정보
+    </div>
+    <hr style="border: solid 0.5px black;">
+    <div id="lnb" style="height: 300px;">
         <ul style="list-style:none; padding-left:0px;">
-            <li style="padding: 10px 0 0 10px;"><a asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosisType">◎ 진단 종류</a></li>
-            <li style="padding: 10px 0 0 10px;"><a asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosisClass">◎ 진단 구분</a></li>
-            <li style="padding: 10px 0 0 10px;"><a asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosisEvaluationArea">◎ 진단 평가영역</a></li>
-            <li style="padding: 10px 0 0 10px;"><a asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosisEvaluationQnA">◎ 평가문제와 지문</a></li>
-            <li style="padding: 10px 0 0 10px;"><a asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosisInputType">◎ 입력 형식</a></li>
-            <li style="padding: 10px 0 0 10px;"><a asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosisEvaluationMeasurement">◎ 평가 척도</a></li>
-            <li style="padding: 10px 0 0 10px;"><a asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosisLevel">◎ 진단 수준</a></li>            
+            <li class="menu">
+                <a asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosisType">진단 종류</a>
+            </li>
+            <li class="menu">
+                <a asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosisClass">진단 구분</a>
+            </li>
+            <li class="menu">
+                <a asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosisEvaluationArea">진단 평가영역</a>
+            </li>
+            <li class="menu">
+                <a asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosisEvaluationQnA">평가문제와 지문</a>
+            </li>
+            <li class="menu">
+                <a asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosisInputType">입력 형식</a>
+            </li>
+            <li class="menu">
+                <a asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosisEvaluationMeasurement">평가 척도</a>
+            </li>
+            <li class="menu">
+                <a asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosticLevel">진단 수준</a>
+            </li>
         </ul>
     </div>
 </aside>
